fixed header overflow

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -568,8 +568,8 @@ a:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 17%;
-  width: 100vw;
+  margin-left: 14.28571%;
+  width: calc(100vw - (1/7 * 100%));
   height: 100vh;
 }
 
