--- a/style/scss/components/_intro.scss
+++ b/style/scss/components/_intro.scss
@@ -13,8 +13,8 @@
   .title-container {
     position: absolute;
     display: flex;
-    margin-left: 17%;
-    width: 100vw;
+    margin-left: 1/7 * 100%;
+    width: calc(100vw - (1/7 * 100%));
     height: 100vh;
 
     @media screen and (max-width: $breakpoint-md) {
